# aoc2020

./: day_1.py  pyproject.toml
aoc/: day_2.py
aoc/day_3/: day_3.py
aoc/day_4/: day_4.py
