[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["didi <didi@leaf.space>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
devtools = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
